--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,19 +6,20 @@
 
     <uses-sdk
         android:minSdkVersion="9"
-        android:targetSdkVersion="18" />
+        android:targetSdkVersion="19" />
 
-    <uses-permission android:name="android.permission.INTERNET">
+    <uses-permission android:name="android.permission.INTERNET" >
     </uses-permission>
-    
+
     <application
         android:name="cc.pat.fchat.FApp"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        
-                <service android:name="cc.pat.fchat.ChatService"></service>
+        <service android:name="cc.pat.fchat.ChatService" >
+        </service>
+
         <activity
             android:name="cc.pat.fchat.SplashActivity"
             android:label="@string/app_name" >
@@ -27,6 +28,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="cc.pat.fchat.MainActivity"
+		 >
         </activity>
     </application>
 
